<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.tormod.spotifypartyplayer.MainActivity">
    <TextView
        android:id="@+id/startHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page1_header"
        android:layout_marginTop="100dp"
        android:textColor="@color/textLight"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0" />
    <Button
        android:id="@+id/startConnectSession"
        android:layout_width="348dp"
        android:layout_height="185dp"
        android:text="@string/page1_button1"
        android:background="@color/page1_button1"
        android:onClick="connectToSession"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:id="@+id/startCreateSession"
        android:layout_width="348dp"
        android:layout_height="185dp"
        android:text="@string/page1_button2"
        android:layout_marginTop="350dp"
        android:background="@color/page1_button2"
        android:onClick="startSession"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
